cosmos/apps/personal-blog/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-blog
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: personal-blog
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: personal-blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-blog
  namespace: personal-blog
  labels:
    app: personal-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-blog
  template:
    metadata:
      labels:
        app: personal-blog
    spec:
      containers:
        - name: blog
          image: ghcr.io/incognito124/personal-blog-frontend:1767736178
          ports:
            - name: web
              containerPort: 3000
        - name: blog-db
          image: ghcr.io/incognito124/personal-blog-database:1767733870
          ports:
            - name: web
              containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog
  namespace: personal-blog
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: "argocd-redirect-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: terra-incognita.blog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-blog
                port:
                  number: 80
